Fix modal being covered under you were watching

--- a/ui/src/components/UiModal/style.css
+++ b/ui/src/components/UiModal/style.css
@@ -10,6 +10,7 @@
   bottom: 0;
   background: rgba(0,0,0,0.7);
   overflow-y: scroll;
+  z-index: var(--zindex-modal);
 }
 
 .ui-modal {
